--- a/templates/map_dashboard/map-tab3.html
+++ b/templates/map_dashboard/map-tab3.html
@@ -252,6 +252,9 @@ $('#nav-tab4').click(function() {
 });
 
  $("#area-1").change(function(){
+  svg1.selectAll('*').remove();
+  svg2.selectAll('*').remove();
+  svg3.selectAll('*').remove();
   $.ajax({
         url : "{% url 'ajaxAreaTab3' %}", // the endpoint
         type : "POST", // http method
@@ -269,10 +272,6 @@ $('#nav-tab4').click(function() {
                         .append($('<option>', { value:value.timeperiod_id })
                         .text(value.timeperiod)); 
                 });
-
-                svg1.selectAll('*').remove();
-                svg2.selectAll('*').remove();
-                svg3.selectAll('*').remove();
 
                 var data_state = JSON.parse(response.context.data_level2);
                 var data2 = []
@@ -315,6 +314,10 @@ $('#nav-tab4').click(function() {
  });
 
       $("#indicator-1").change(function(){
+        svg1.selectAll('*').remove();
+        svg2.selectAll('*').remove();
+        svg3.selectAll('*').remove();
+
         $.ajax({
         url : "{% url 'ajaxIndicatorTab3' %}", // the endpoint
         type : "POST", // http method
@@ -343,10 +346,6 @@ $('#nav-tab4').click(function() {
                         .append($('<option>', { value:value.timeperiod_id })
                         .text(value.timeperiod)); 
                 }); 
-                
-                svg1.selectAll('*').remove();
-                svg2.selectAll('*').remove();
-                svg3.selectAll('*').remove();
 
                 var data_state = JSON.parse(response.context.data_level2);
                 var data2 = []
@@ -384,6 +383,9 @@ $('#nav-tab4').click(function() {
       });
 
       $("#subgroup-1").change(function(){
+        svg1.selectAll('*').remove();
+        svg2.selectAll('*').remove();
+        svg3.selectAll('*').remove();
         $.ajax({
         url : "{% url 'ajaxSubgroupTab3' %}", // the endpoint
         type : "POST", // http method
@@ -406,10 +408,6 @@ $('#nav-tab4').click(function() {
                         .append($('<option>', { value:value.timeperiod_id })
                         .text(value.timeperiod)); 
                 });   
-               
-                svg1.selectAll('*').remove();
-                svg2.selectAll('*').remove();
-                svg3.selectAll('*').remove();
 
                 var data_state = JSON.parse(response.context.data_level2);
                 var data2 = []
@@ -449,6 +447,9 @@ $('#nav-tab4').click(function() {
 
 
       $("#timeperiod-1").change(function(){
+        svg1.selectAll('*').remove();
+        svg2.selectAll('*').remove();
+        svg3.selectAll('*').remove();
         $.ajax({
         url : "{% url 'ajaxTimeperiodTab3' %}", // the endpoint
         type : "POST", // http method
@@ -464,11 +465,6 @@ $('#nav-tab4').click(function() {
 
              // remove the value from the input
            // console.log(json); // log the returned json to the console
-              
-                svg1.selectAll('*').remove();
-                svg2.selectAll('*').remove();
-                svg3.selectAll('*').remove();
-
                 var data_state = JSON.parse(response.context.data_level2);
                 var data2 = []
                 data_state.forEach(element => {
@@ -508,7 +504,7 @@ $('#nav-tab4').click(function() {
 
     });
       });
-      const renderSelectedarea = (data, geojson, svg) => {
+    const renderSelectedarea = (data, geojson, svg) => {
     const g = svg.append("g");
     var scaleCenter = calculateScaleCenter(geojson);
     mercator.scale(8000)
@@ -678,6 +674,12 @@ else{
       }
   renderSelectedarea(geojson.features, geojson, svg); 
   }
+  else{
+    svg.append('text').text('No data: please select another survey')
+    .attr('x', "20%")
+    .attr('y', "10%")
+    .attr('fill', 'black')
+  }
  }
   
 
@@ -711,6 +713,12 @@ else{
       }
       render(json.features, svg);
     }); 
+  }
+  else{
+    svg.append('text').text('No data: please select another survey')
+    .attr('x', "20%")
+    .attr('y', "10%")
+    .attr('fill', 'black')
   }
  }
 
