--- a/templates/map_dashboard/map.html
+++ b/templates/map_dashboard/map.html
@@ -44,73 +44,19 @@ nav > div a.nav-item.nav-link:focus
 }
 
 
- body {
-  position: fixed;
+/* .maps-group {
+  overflow-y: auto;
+  white-space: nowrap;
+} */
+
+body {
+  position: relative;
   left: 0;
   right: 0;
   top: 0;
   bottom: 0;
   margin: 0;
   height: 100%;
-  overflow: hidden;
-}
-.mapdiv{
-    width: 100%;
-    height: 100%;
-   
-}
-.selection{
-    align-content: center;
-}
-
-.tab{
-    width: 100%;
-
-}
-
-.just-padding {
-    padding: 15px;
-}
-
-.list-group.list-group-root {
-    padding: 0;
-    overflow: hidden;
-}
-
-.list-group.list-group-root .list-group {
-    margin-bottom: 0;
-}
-
-.list-group.list-group-root .list-group-item {
-    border-radius: 2;
-    border-width: 1px 0 0 0;
-    width: auto;  
-    height: 35px; 
-    background-color:#D93545;
-    color:white;
-    margin-top: 20px;
-}
-
-.list-group.list-group-root > .list-group-item:first-child {
-    border-top-width: 0;
-}
-
-.list-group.list-group-root > .list-group > .list-group-item {
-    margin-left:40px;
-}
-
-.list-group.list-group-root > .list-group > .list-group > .list-group-item {
-    margin-left: 40px;
-}
-
-.list-group-item .glyphicon {
-    margin-right: 5px;
-}
-
-
-.dd{
-  margin-left: 10%;
-
 }
 
 div.tooltip { 
@@ -147,9 +93,9 @@ div.tooltip {
         </nav>
     </div>
     </div>
-    </div>
  
-       <form method="POST" name="nutriInfo">
+ 
+
         <div class="row mt-2">
             <div class="col-3">
               <select class="custom-select" name ="area_select" id="area-1"> 
@@ -184,27 +130,23 @@ div.tooltip {
     </select> 
   </div>
       </div>
-       </form>
-      <div class="row mt-5">
+     
 
-        <div class="col-4" id="chart3">
-          <!-- <svg></svg> -->
+      <div class="row mt-5 ">
+        <div class="offset-4" id="chart3">
         </div>
-
-        <div class="col-4" id="chart1">
-          <!-- <svg></svg> -->
+        <div class="col-6" id="chart1">
         </div>
-        <div class="col-4" id="chart2">
-          <!-- <svg></svg> -->
-        </div>
+        <div class="col-6" id="chart2">
+        
       </div>
-       
-              
+    </div>   
+          
          
   <script>
 
     //Reading data
-   const width = 920;
+   const width = document.getElementById("chart1").offsetWidth+100;
   const height = 580;
   const svg1 = d3 
       .select("#chart1").append("svg")
@@ -219,13 +161,12 @@ div.tooltip {
       .attr("width", width)
       .attr("height", height);
 
- var mercator = d3 .geoMercator().scale(1);
- const pathGenerator = d3.geoPath().projection(mercator);
+ var mercator = d3.geoMercator().scale(1);
+ var pathGenerator = d3.geoPath().projection(mercator);
    
  var districtJson='/static/json/india-district.json';
  var stateJson='/static/json/india-state.json';
  
-
 
 $('#nav-tab2').click(function() {
   var areaSelected= $('#area-1').val();
@@ -253,6 +194,11 @@ $('#nav-tab4').click(function() {
  $("#area-1").change(function(){
 
   areaSelected = $('#area-1').val();
+  svg1.selectAll('*').remove();
+  svg2.selectAll('*').remove();
+  svg3.selectAll('*').remove();
+
+
   $.ajax({
         url : "{% url 'ajaxAreaTab1' %}", // the endpoint
         type : "POST", // http method
@@ -271,10 +217,6 @@ $('#nav-tab4').click(function() {
                         .text(value.timeperiod)); 
                 });
 
-                svg1.selectAll('*').remove();
-                svg2.selectAll('*').remove();
-                svg3.selectAll('*').remove();
-
                 var data_state = JSON.parse(response.context.data_level2);
                 var data2 = []
                 data_state.forEach(element => {
@@ -289,7 +231,10 @@ $('#nav-tab4').click(function() {
                 selectArea_data.forEach(element => {
                   data3.push(element.fields);
                   });
-                
+                  var scaleCenter = calculateScaleCenter(response.context.select_area_geodata);
+                  mercator.scale(scaleCenter.scale)
+                   .center(scaleCenter.center)
+                   .translate([width/2, height/2]);
                 var selectArea_geodata = JSON.parse(response.context.select_area_geodata);
                 addPropertiesSelectedArea(data3, selectArea_geodata, svg3);
                 }
@@ -315,6 +260,11 @@ $('#nav-tab4').click(function() {
  });
 
       $("#indicator-1").change(function(){
+        svg1.selectAll('*').remove();
+        svg2.selectAll('*').remove();
+        svg3.selectAll('*').remove();
+
+
         $.ajax({
         url : "{% url 'ajaxIndicatorTab1' %}", // the endpoint
         type : "POST", // http method
@@ -344,10 +294,6 @@ $('#nav-tab4').click(function() {
                         .text(value.timeperiod)); 
                 }); 
                 
-                svg1.selectAll('*').remove();
-                svg2.selectAll('*').remove();
-                svg3.selectAll('*').remove();
-
                 var data_state = JSON.parse(response.context.data_level2);
                 var data2 = []
                 data_state.forEach(element => {
@@ -363,6 +309,10 @@ $('#nav-tab4').click(function() {
                   data3.push(element.fields);
                   });
                 
+                  var scaleCenter = calculateScaleCenter(response.context.select_area_geodata);
+                  mercator.scale(scaleCenter.scale)
+                   .center(scaleCenter.center)
+                   .translate([width/2, height/2]);
                 var selectArea_geodata = JSON.parse(response.context.select_area_geodata);
                 addPropertiesSelectedArea(data3, selectArea_geodata, svg3);
                 }
@@ -384,6 +334,9 @@ $('#nav-tab4').click(function() {
       });
 
       $("#subgroup-1").change(function(){
+        svg1.selectAll('*').remove();
+        svg2.selectAll('*').remove();
+        svg3.selectAll('*').remove();
         $.ajax({
         url : "{% url 'ajaxSubgroupTab1' %}", // the endpoint
         type : "POST", // http method
@@ -406,10 +359,6 @@ $('#nav-tab4').click(function() {
                         .append($('<option>', { value:value.timeperiod_id })
                         .text(value.timeperiod)); 
                 });   
-               
-                svg1.selectAll('*').remove();
-                svg2.selectAll('*').remove();
-                svg3.selectAll('*').remove();
 
                 var data_state = JSON.parse(response.context.data_level2);
                 var data2 = []
@@ -425,7 +374,10 @@ $('#nav-tab4').click(function() {
                 selectArea_data.forEach(element => {
                   data3.push(element.fields);
                   });
-                
+                  var scaleCenter = calculateScaleCenter(response.context.select_area_geodata);
+                  mercator.scale(scaleCenter.scale)
+                   .center(scaleCenter.center)
+                   .translate([width/2, height/2]);
                 var selectArea_geodata = JSON.parse(response.context.select_area_geodata);
                 addPropertiesSelectedArea(data3, selectArea_geodata, svg3);
                 }
@@ -448,6 +400,9 @@ $('#nav-tab4').click(function() {
 
 
       $("#timeperiod-1").change(function(){
+        svg1.selectAll('*').remove();
+        svg2.selectAll('*').remove();
+        svg3.selectAll('*').remove();
         $.ajax({
         url : "{% url 'ajaxTimeperiodTab1' %}", // the endpoint
         type : "POST", // http method
@@ -463,10 +418,6 @@ $('#nav-tab4').click(function() {
 
              // remove the value from the input
            // console.log(json); // log the returned json to the console
-              
-                svg1.selectAll('*').remove();
-                svg2.selectAll('*').remove();
-                svg3.selectAll('*').remove();
 
                 var data_state = JSON.parse(response.context.data_level2);
                 var data2 = []
@@ -474,7 +425,6 @@ $('#nav-tab4').click(function() {
                   data2.push(element.fields);
                   });
                 addProperties(data2, stateJson, svg1);
-
                 if(response.area_level > 1)
                 {
                 var selectArea_data = JSON.parse(response.context.select_area_data);
@@ -482,7 +432,6 @@ $('#nav-tab4').click(function() {
                 selectArea_data.forEach(element => {
                   data3.push(element.fields);
                   });
-                
                 var selectArea_geodata = JSON.parse(response.context.select_area_geodata);
                 addPropertiesSelectedArea(data3, selectArea_geodata, svg3);
                 }
@@ -504,54 +453,57 @@ $('#nav-tab4').click(function() {
     });
       });
 
-      const renderSelectedarea = (data, geojson, svg) => {
-    const g = svg.append("g");
-    var scaleCenter = calculateScaleCenter(geojson);
-    mercator.scale(8000)
+     
+
+      const renderSelectedarea = (data, areaJson, svg) => {
+
+        var scaleCenter = calculateScaleCenter(areaJson);
+        mercator.scale(4000)
         .center(scaleCenter.center)
         .translate([width/2, height/2]);
-    var tooltip = d3.select("body").append("div") 
-          .attr("class", "tooltip")       
-          .style("opacity", 0);
-  let c1Value  = d => d.properties.dataValue;
-  const onMouseOver = d =>{	
-    if(typeof d.properties.dataValue != 'undefined')
-    {
-  tooltip.transition().duration(200).style("opacity", .9);		
-  tooltip.html("<b>"+d.properties.dt_name+"</b><br><b>Value:</b>"+d.properties.dataValue)
-      .style("left", d3.event.pageX + "px")
-      .style("top",  d3.event.pageY - 30 + "px");	
-    }
-  };
-  
-  let myColor = (opt,v) =>{
-    let min,max,comp, low, high;  
-      min = d3.min(data,c1Value);
-      max = d3.max(data,c1Value);
-      comp = (max - min)/3;
-      low = min+comp;
-      high =max -comp;
-    if (typeof v != "undefined") {
-    
-           if (v < low) return "#24562B";
-            //matte green
-            else if (v >= low && v <= high) return "#FFE338";
-            //matte yellow
-            else if (v > high) return "#B2022F"; //matte red
-    }
-    else {
-      return "#A9A9B0";
-    }
-  };  
-  	let paths = g.selectAll('path').data(data);
-    let pathEnter = 
-    paths.enter().append('path').attr('d',pathGenerator).attr('class','my-block')
-    .style("fill", d =>myColor(1,c1Value(d))).on("mouseover", d => onMouseOver(d))          
-    .on("mouseout", function(d) {   
-              tooltip.transition()    
-              .duration(500)    
-              .style("opacity", 0); 
-            });
+        const g = svg.append("g");
+        var tooltip = d3.select("body").append("div") 
+              .attr("class", "tooltip")       
+              .style("opacity", 0);
+        let c1Value  = d => d.properties.dataValue;
+        const onMouseOver = d =>{	
+          if(typeof d.properties.dataValue != 'undefined')
+          {
+        tooltip.transition().duration(200).style("opacity", .9);		
+        tooltip.html("<b>"+d.properties.dt_name+"</b><br><b>Value:</b>"+d.properties.dataValue)
+            .style("left", d3.event.pageX + "px")
+            .style("top",  d3.event.pageY - 30 + "px");	
+          }
+        };
+        
+        let myColor = (opt,v) =>{
+          let min,max,comp, low, high;  
+            min = d3.min(data,c1Value);
+            max = d3.max(data,c1Value);
+            comp = (max - min)/3;
+            low = min+comp;
+            high =max -comp;
+          if (typeof v != "undefined") {
+          
+                if (v < low) return "#24562B";
+                  //matte green
+                  else if (v >= low && v <= high) return "#FFE338";
+                  //matte yellow
+                  else if (v > high) return "#B2022F"; //matte red
+          }
+          else {
+            return "#A9A9B0";
+          }
+        };  
+          let paths = g.selectAll('path').data(data);
+          let pathEnter = 
+          paths.enter().append('path').attr('d',pathGenerator).attr('class','my-block')
+          .style("fill", d =>myColor(1,c1Value(d))).on("mouseover", d => onMouseOver(d))          
+          .on("mouseout", function(d) {   
+                    tooltip.transition()    
+                    .duration(500)    
+                    .style("opacity", 0); 
+                  });
      
   };
 
@@ -578,7 +530,7 @@ let area_level = {{ area_level }};
     data3.push(element.fields);
   });
   //let select_area_geodata = JSON.parse(geoJsonData);
-   addProperties(data3, geoJsonData, svg3);
+  addPropertiesSelectedArea(data3, geoJsonData, svg3);
   }
   else{
   addProperties(data1, stateJson, svg3);
@@ -673,6 +625,12 @@ let area_level = {{ area_level }};
       }
   renderSelectedarea(geojson.features, geojson, svg); 
   }
+  else{
+    svg.append('text').text('No data: please select another survey')
+    .attr('x', "20%")
+    .attr('y', "10%")
+    .attr('fill', 'black')
+  }
  }
   
 
@@ -684,34 +642,39 @@ let area_level = {{ area_level }};
   d3.json(geojson).then(json =>{
       for (var i = 0; i < data.length; i++) {
       	var areacode = data[i].area_code;
-		  var areaname = data[i].area_name;
         var dataValue = data[i].data_value;
-       
-			 
-        //var datac2 = data[i].c2;
-        
-      for (var j = 0; j < json.features.length; j++)  {
-		  var jsonAreaId = json.features[j].properties.ID_;
-        var jsonAreaName = json.features[j].properties.NAME1_;
-        
-          if (areacode == jsonAreaId) {
 
-            
-	      json.features[j].properties.dataValue = +dataValue; 
-		  
-         // json.features[j].properties.c2 = +datac2; 
-          break;
+      for (var j = 0; j < json.features.length; j++)  
+      {
+        var jsonAreaId = json.features[j].properties.ID_;
+        if (areacode == jsonAreaId) 
+        {      
+	        json.features[j].properties.dataValue = +dataValue; 
+           break;
         }
       }
       }
       render(json.features, svg);
     }); 
   }
+  else{
+    svg.append('text').text('No data: please select another survey')
+    .attr('x', "20%")
+    .attr('y', "10%")
+    .attr('fill', 'black')
+  }
  }
 
  function calculateScaleCenter(features) {
                     
                     var bbox_path = pathGenerator.bounds(features),
+                    
+                    //  hscale  = 150*width  / (bbox_path[1][0] - bbox_path[0][0]);
+                    //  vscale  = 150*height / (bbox_path[1][1] - bbox_path[0][1]);
+                    //  scale   = (hscale < vscale) ? hscale : vscale;
+                    // offset  = [width - (bbox_path[0][0] + bbox_path[1][0])/2,
+                    //             height - (bbox_path[0][1] + bbox_path[1][1])/2];
+
                     scale = 0.95 / Math.max(
                         (bbox_path[1][0] - bbox_path[0][0]) / width,
                         (bbox_path[1][1] - bbox_path[0][1]) / height
@@ -727,6 +690,7 @@ let area_level = {{ area_level }};
                     return {
                         'scale': scale,
                         'center': center
+                       
                     };
                 }
 
